2019-11-01  Devin Rousso  <drousso@apple.com>

        Web Inspector: Timelines: add a timeline that shows information about any recorded CSS animation/transition
        https://bugs.webkit.org/show_bug.cgi?id=203651
        <rdar://problem/56128726>

        Reviewed by Brian Burg.

        Unlike all other forms of Web Animations, CSS animations/transitions, are _not_ created by
        JavaScript, and therefore can seemingly appear out of nowhere. This patch expands the Media
        timeline to be the Media & Animations timeline, which tracks when CSS animations/transitions
        are created, started, delayed, iterated, canceled, or finished.

        Test: inspector/animation/tracking.html

        * animation/KeyframeEffect.cpp:
        (WebCore::KeyframeEffect::apply):
        * animation/WebAnimation.h:
        * animation/WebAnimation.cpp:
        (WebCore::WebAnimation::~WebAnimation):
        (WebCore::WebAnimation::contextDestroyed): Added.
        (WebCore::WebAnimation::setEffectInternal):
        * inspector/InspectorInstrumentation.h:
        (WebCore::InspectorInstrumentation::willApplyKeyframeEffect): Added.
        (WebCore::InspectorInstrumentation::didChangeWebAnimationEffect): Added.
        (WebCore::InspectorInstrumentation::willDestroyWebAnimation): Added.
        * inspector/InspectorInstrumentation.cpp:
        (WebCore::InspectorInstrumentation::willApplyKeyframeEffectImpl): Added.
        (WebCore::InspectorInstrumentation::didChangeWebAnimationEffectImpl): Added.
        (WebCore::InspectorInstrumentation::willDestroyWebAnimationImpl): Added.
        Add instrumentation points for CSS animations/transitions.

        * inspector/agents/InspectorAnimationAgent.h: Added.
        * inspector/agents/InspectorAnimationAgent.cpp: Added.
        (WebCore::InspectorAnimationAgent::InspectorAnimationAgent):
        (WebCore::InspectorAnimationAgent::didCreateFrontendAndBackend):