@@ -1,3 +1,15 @@
+2019-11-01  Chris Fleizach  <cfleizach@apple.com>
+
+        AX: Restrict WebSpeech voices to built-in voices only
+        https://bugs.webkit.org/show_bug.cgi?id=203689
+
+        Reviewed by Per Arne Vollan.
+
+        Only show built-in voices when requesting through WebKit to reduce fingerprinting surface area. 
+
+        * platform/ios/PlatformSpeechSynthesizerIOS.mm:
+        (WebCore::PlatformSpeechSynthesizer::initializeVoiceList):
+
 2019-11-01  Devin Rousso  <drousso@apple.com>
 
         Web Inspector: Timelines: add a timeline that shows information about any recorded CSS animation/transition
